<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="comment" type="com.tripleThreads.taxiyaz.data.comment.Comment"/>
        <variable name="route" type="com.tripleThreads.taxiyaz.data.route.Route"/>
        <variable name="listener" type="com.tripleThreads.taxiyaz.fragments.AddCommentEventListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="303dp"
                android:id="@+id/guideline5"/>
        <TextView
                android:text="@string/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                android:layout_marginBottom="8dp"
                android:hint="@string/comment_here"
                android:singleLine="false"
                android:maxLines ="4"
                android:scrollHorizontally="false"
                android:textAllCaps="false"
                app:layout_constraintVertical_bias="0.055"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@={comment.comment}"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="423dp"
                android:id="@+id/guideline7"/>

        <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/route_rating_bar"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.402"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="74dp"
                android:layout_marginStart="74dp"
                android:rating="@{route.rating}"
                android:layout_marginEnd="97dp"
                android:layout_marginRight="97dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/submit"
                android:layout_width="116dp"
                android:layout_height="42dp"
                android:id="@+id/button"
                android:background="@drawable/button_round"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> listener.onButtonClick(comment)}"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.354"
                app:layout_constraintTop_toTopOf="@+id/guideline5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>