...
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            tools:context=".fragments.RouteFragment">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:hint="@string/search"
...
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:focusableInTouchMode="true"
                android:onTextChanged="@{(text, start, before, count) -> handler.onKeyChange(text, start, before, count)}"
                app:layout_constraintBottom_toTopOf="@+id/tabs"/>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
...
