<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_recents"
            android:enabled="true"
            android:icon="@drawable/ic_history"
            android:title="@string/recent"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_favorites"
            android:enabled="true"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmarks"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_add"
            android:enabled="true"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/add_new"
            app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
          android:enabled="true"
          android:icon="@drawable/ic_settings_black_24dp"
          android:title="@string/settings"
          app:showAsAction="always" />
</menu>