<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:minHeight="220dp"
                                                   app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
                                                   tools:context=".fragments.add_route.BottomDialogFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_description"
            android:textSize="16sp"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/horizontal_gl"
            app:layout_constraintStart_toStartOf="@+id/vertical_left_gl"/>


    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/horizontal_gl"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:hint="Location, unique names"
            android:id="@+id/location_name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="GPS Location"
            android:id="@+id/textView2"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/vertical_left_gl"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <RadioGroup
            android:id="@+id/gps_location"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location_name"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/radio_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_location"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/radio_pinned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_map"/>

    </RadioGroup>

    <Button android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/button_round"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gps_location"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="20dp"
            android:id="@+id/submit_node"
            android:text="@string/submit"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="124dp"
            android:id="@+id/guideline2"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="15dp"
            android:id="@+id/vertical_left_gl"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="45dp"
            android:id="@+id/horizontal_gl"/>


</androidx.constraintlayout.widget.ConstraintLayout>