<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.AlternativeRoutingFragment"
>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alternate_route_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
    >

    </androidx.recyclerview.widget.RecyclerView>
</FrameLayout>